# major_2_career_predict

./: .gitignore  TODO.md
backend/: .env.example  TODO.md  advisor.py  bayesian.py  data.py  main.py  matcher.py  models.py  pyproject.toml  requirements.txt  selector.py
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assessment/: page.tsx
frontend/app/result/: page.tsx
frontend/components/: Button.tsx  Card.tsx  LoadingSpinner.tsx  ProgressBar.tsx  QuestionCard.tsx  QuestionRenderer.tsx  ResultCard.tsx
frontend/context/: AssessmentContext.tsx
frontend/lib/: api.ts  types.ts
